--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <canvas class="game-canvas" width="352" height="198"></canvas>
     </div>
 
+
+    <!-- Content  -->
+    <script src="/Content/pizzas.js"></script>
+
     <!-- Scripts -->
     <script src="/utils.js"></script>
     <script src="/DirectionInput.js"></script>
@@ -37,13 +41,17 @@
     <script src="/OverworldMap.js"></script>
     <script src="/Overworld.js"></script>
     <script src="/SceneTransition.js"></script>
-    <script src="/init.js"></script>
 
     <!-- Battle -->
-    <script src="Battle.js"></script>
-    <script src="Combatant.js"></script>
-    <script src="SubmissionMenu.js"></script>
-    <script src="Team.js"></script>
+    <script src="/Battle/Battle.js"></script>
+    <script src="/Battle/Combatant.js"></script>
+    <script src="/Battle/SubmissionMenu.js"></script>
+    <script src="/Battle/Team.js"></script>
+
+
+    <!-- Start -->
+    <script src="/init.js"></script>
+
 </body>
 
 </html>
