--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Content  -->
     <script src="/Content/pizzas.js"></script>
+    <script src="/Content/actions.js"></script>
 
     <!-- Scripts -->
     <script src="/utils.js"></script>
@@ -45,8 +46,10 @@
     <!-- Battle -->
     <script src="/Battle/Battle.js"></script>
     <script src="/Battle/Combatant.js"></script>
-    <script src="/Battle/SubmissionMenu.js"></script>
     <script src="/Battle/Team.js"></script>
+    <script src="/Battle/SubmissionMenu.js"></script>
+    <script src="/Battle/BattleEvent.js"></script>
+    <script src="/Battle/TurnCycle.js"></script>
 
 
     <!-- Start -->
