--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="/Battle/SubmissionMenu.js"></script>
     <script src="/Battle/BattleEvent.js"></script>
     <script src="/Battle/TurnCycle.js"></script>
+    <script src="/Battle/BattleAnimations.js"></script>
 
 
     <!-- Start -->
