--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/styles/Battle.css" type="text/css">
     <link rel="stylesheet" href="/styles/Combatant.css" type="text/css">
     <link rel="stylesheet" href="/styles/SubmissionMenu.css" type="text/css">
+    <link rel="stylesheet" href="/styles/KeyboardMenu.css" type="text/css">
     <link rel="stylesheet" href="/styles/Team.css" type="text/css">
 
     <title>RPG tutorial project</title>
@@ -42,6 +43,7 @@
     <script src="/OverworldMap.js"></script>
     <script src="/Overworld.js"></script>
     <script src="/SceneTransition.js"></script>
+    <script src="/KeyboardMenu.js"></script>
 
     <!-- Battle -->
     <script src="/Battle/Battle.js"></script>
